--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -102,6 +102,7 @@
     .contacto__logos--container h3{
         font-size: 10px ;
         font-weight: 900;
+        margin: 10%;
         color: $color_secundario;
         
         @media only screen and (min-width: 480px) {
