se termino de hacer el sitio responsive

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,5 +10,7 @@
 @import "footer";
 @import "contacto";
 @import "historiapage";
-@import "ilustraciones";
 @import "carousel";
+@import "ilustraciones";
+@import "grafico";
+@import "web";
