--- a/sass/_grafico.scss
+++ b/sass/_grafico.scss
@@ -1,4 +1,4 @@
-.hero__ilustraciones{
+.hero__grafico{
     margin-top: clamp(65px, 17vw, 130px);
     background-image: url(../img/fondorosa.jpg);
     background-size: cover;
@@ -7,58 +7,54 @@
         max-width: 1024px;
     }
 
-    .hero__ilustraciones--titulo{
+    .hero__grafico--titulo{
         text-align: end;
         font-size: clamp(40px, 12vw , 60px);
         margin-right: 10px;
     }
 }
 
-.trabajos_ilustraciones{
+.trabajos_grafico{
     margin-top: 40px;
 }
 
-.ilustraciones__video{
+.grafico__video{
     margin-top: 40px;
     background-color: $color_primario;
     padding: 20px 0px;
 
     @media only screen and (min-width: 992px) {
-        background: linear-gradient(90deg, rgba(241,131,195,1) 0%, rgba(241,131,195,1) 60%, rgba(45,45,45,1) 60%, rgba(45,45,45,1) 99%);
+        background: linear-gradient(45deg, rgba(45,45,45,1) 20%, rgba(241,131,195,1) 20%, rgba(241,131,195,1) 24%, rgba(45,45,45,1) 24%, rgba(45,45,45,1) 25%, rgba(241,131,195,1) 25%);
         }
 }
 
-.ilustraciones__video h2{
+.grafico__video h2{
     grid-area: titulo ;
 
     @media only screen and (min-width: 992px) {
         align-self: flex-end;
         text-align: start;
-        margin-left: 138px;
         }
 
     @media only screen and (min-width: 1024px) {
         font-size: 45px ;
-        margin-left: 50px;
         }
 }
 
-.ilustraciones__video p{
+.grafico__video p{
     grid-area: parrafo ;
 
     @media only screen and (min-width: 992px) {
         align-self: flex-start ;
         text-align: start;
-        margin-left: 138px;
         }
 
     @media only screen and (min-width: 1024px) {
         font-size: 24px;
-        margin-left: 40px;
         }
 }
 
-.ilustraciones__video article{
+.grafico__video article{
     max-width: 1240px;
     display: grid;
     grid-template-columns: 1fr;
@@ -69,8 +65,8 @@
     @media only screen and (min-width: 992px) {
         height: 400px;
         grid-template-columns: 1fr 1fr 1fr;
-        grid-template-areas: "titulo video video"
-                            "parrafo video video";
+        grid-template-areas: "video video titulo "
+                            "video video parrafo ";
         }
 }
 
@@ -83,17 +79,16 @@
     grid-area: video;
 
     @media only screen and (min-width: 992px) {
-            align-self: flex-start;
-            margin-left: 50px;
+            align-self: center;
         }
 }
 
-.ilustraciones__empresas{
+.grafico__empresas{
     margin-top: 40px;
     background-color: $blanco;
 }
 
-.ilustraciones__logo--container{
+.grafico__logo--container{
     margin-bottom: 10px;
     width: 100vw;
     max-width: 1240px;
