--- a/sass/_web.scss
+++ b/sass/_web.scss
@@ -1,4 +1,4 @@
-.hero__ilustraciones{
+.hero__web{
     margin-top: clamp(65px, 17vw, 130px);
     background-image: url(../img/fondorosa.jpg);
     background-size: cover;
@@ -7,28 +7,28 @@
         max-width: 1024px;
     }
 
-    .hero__ilustraciones--titulo{
+    .hero__web--titulo{
         text-align: end;
         font-size: clamp(40px, 12vw , 60px);
         margin-right: 10px;
     }
 }
 
-.trabajos_ilustraciones{
+.trabajos_web{
     margin-top: 40px;
 }
 
-.ilustraciones__video{
+.web__video{
     margin-top: 40px;
     background-color: $color_primario;
     padding: 20px 0px;
 
     @media only screen and (min-width: 992px) {
-        background: linear-gradient(90deg, rgba(241,131,195,1) 0%, rgba(241,131,195,1) 60%, rgba(45,45,45,1) 60%, rgba(45,45,45,1) 99%);
+        background: linear-gradient(315deg, rgba(45,45,45,1) 0%, rgba(45,45,45,1) 6%, rgba(241,131,195,1) 6%, rgba(241,131,195,1) 10%, rgba(45,45,45,1) 10%, rgba(45,45,45,1) 15%, rgba(241,131,195,1) 15%, rgba(241,131,195,1) 18%, rgba(45,45,45,1) 18%, rgba(45,45,45,1) 20%, rgba(241,131,195,1) 20%);
         }
 }
 
-.ilustraciones__video h2{
+.web__video h2{
     grid-area: titulo ;
 
     @media only screen and (min-width: 992px) {
@@ -43,7 +43,7 @@
         }
 }
 
-.ilustraciones__video p{
+.web__video p{
     grid-area: parrafo ;
 
     @media only screen and (min-width: 992px) {
@@ -58,7 +58,7 @@
         }
 }
 
-.ilustraciones__video article{
+.web__video article{
     max-width: 1240px;
     display: grid;
     grid-template-columns: 1fr;
@@ -88,12 +88,12 @@
         }
 }
 
-.ilustraciones__empresas{
+.web__empresas{
     margin-top: 40px;
     background-color: $blanco;
 }
 
-.ilustraciones__logo--container{
+.web__logo--container{
     margin-bottom: 10px;
     width: 100vw;
     max-width: 1240px;
