--- a/styles/style.css
+++ b/styles/style.css
@@ -738,7 +738,6 @@ nav li {
   margin-top: clamp(65px, 17vw, 130px);
   background-image: url(../img/fondorosa.jpg);
   background-size: cover;
-  max-width: 100vw;
 }
 .hero__contacto div {
   max-width: 1024px;
@@ -1036,11 +1035,30 @@ nav li {
   }
 }
 
+.carousel {
+  width: 90%;
+  max-width: 1240px;
+}
+.carousel .carousel-indicators [data-bs-target] {
+  background-color: #f183c3;
+}
+.carousel .carousel-control-next-icon, .carousel .carousel-control-prev-icon {
+  display: inline-block;
+  width: 2rem;
+  height: 2rem;
+  background-position: 50%;
+  background-size: 100% 100%;
+  background-color: #262626;
+  border-radius: 50%;
+}
+
 .hero__ilustraciones {
   margin-top: clamp(65px, 17vw, 130px);
   background-image: url(../img/fondorosa.jpg);
   background-size: cover;
-  max-width: 1240vw;
+}
+.hero__ilustraciones div {
+  max-width: 1024px;
 }
 .hero__ilustraciones .hero__ilustraciones--titulo {
   text-align: end;
@@ -1106,7 +1124,7 @@ nav li {
 @media only screen and (min-width: 992px) {
   .ilustraciones__video article {
     height: 400px;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-areas: "titulo video video" "parrafo video video";
   }
 }
@@ -1122,6 +1140,7 @@ nav li {
 @media only screen and (min-width: 992px) {
   .video__container {
     align-self: flex-start;
+    margin-left: 50px;
   }
 }
 
@@ -1137,19 +1156,205 @@ nav li {
   display: flex;
 }
 
-.carousel {
-  width: 90%;
-  max-width: 1240px;
+.hero__grafico {
+  margin-top: clamp(65px, 17vw, 130px);
+  background-image: url(../img/fondorosa.jpg);
+  background-size: cover;
 }
-.carousel .carousel-indicators [data-bs-target] {
+.hero__grafico div {
+  max-width: 1024px;
+}
+.hero__grafico .hero__grafico--titulo {
+  text-align: end;
+  font-size: clamp(40px, 12vw, 60px);
+  margin-right: 10px;
+}
+
+.trabajos_grafico {
+  margin-top: 40px;
+}
+
+.grafico__video {
+  margin-top: 40px;
   background-color: #f183c3;
+  padding: 20px 0px;
 }
-.carousel .carousel-control-next-icon, .carousel .carousel-control-prev-icon {
-  display: inline-block;
-  width: 2rem;
-  height: 2rem;
-  background-position: 50%;
-  background-size: 100% 100%;
-  background-color: #262626;
-  border-radius: 50%;
+@media only screen and (min-width: 992px) {
+  .grafico__video {
+    background: linear-gradient(45deg, rgb(45, 45, 45) 20%, rgb(241, 131, 195) 20%, rgb(241, 131, 195) 24%, rgb(45, 45, 45) 24%, rgb(45, 45, 45) 25%, rgb(241, 131, 195) 25%);
+  }
+}
+
+.grafico__video h2 {
+  grid-area: titulo;
+}
+@media only screen and (min-width: 992px) {
+  .grafico__video h2 {
+    align-self: flex-end;
+    text-align: start;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .grafico__video h2 {
+    font-size: 45px;
+  }
+}
+
+.grafico__video p {
+  grid-area: parrafo;
+}
+@media only screen and (min-width: 992px) {
+  .grafico__video p {
+    align-self: flex-start;
+    text-align: start;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .grafico__video p {
+    font-size: 24px;
+  }
+}
+
+.grafico__video article {
+  max-width: 1240px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-areas: "titulo" "parrafo" "video";
+}
+@media only screen and (min-width: 992px) {
+  .grafico__video article {
+    height: 400px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas: "video video titulo " "video video parrafo ";
+  }
+}
+
+.video__container {
+  width: 90vw;
+  max-width: 620px;
+  height: 51vw;
+  max-height: 350px;
+  box-shadow: -10px 10px 10px rgba(38, 38, 38, 0.6588235294);
+  grid-area: video;
+}
+@media only screen and (min-width: 992px) {
+  .video__container {
+    align-self: center;
+  }
+}
+
+.grafico__empresas {
+  margin-top: 40px;
+  background-color: #fff;
+}
+
+.grafico__logo--container {
+  margin-bottom: 10px;
+  width: 100vw;
+  max-width: 1240px;
+  display: flex;
+}
+
+.hero__web {
+  margin-top: clamp(65px, 17vw, 130px);
+  background-image: url(../img/fondorosa.jpg);
+  background-size: cover;
+}
+.hero__web div {
+  max-width: 1024px;
+}
+.hero__web .hero__web--titulo {
+  text-align: end;
+  font-size: clamp(40px, 12vw, 60px);
+  margin-right: 10px;
+}
+
+.trabajos_web {
+  margin-top: 40px;
+}
+
+.web__video {
+  margin-top: 40px;
+  background-color: #f183c3;
+  padding: 20px 0px;
+}
+@media only screen and (min-width: 992px) {
+  .web__video {
+    background: linear-gradient(315deg, rgb(45, 45, 45) 0%, rgb(45, 45, 45) 6%, rgb(241, 131, 195) 6%, rgb(241, 131, 195) 10%, rgb(45, 45, 45) 10%, rgb(45, 45, 45) 15%, rgb(241, 131, 195) 15%, rgb(241, 131, 195) 18%, rgb(45, 45, 45) 18%, rgb(45, 45, 45) 20%, rgb(241, 131, 195) 20%);
+  }
+}
+
+.web__video h2 {
+  grid-area: titulo;
+}
+@media only screen and (min-width: 992px) {
+  .web__video h2 {
+    align-self: flex-end;
+    text-align: start;
+    margin-left: 138px;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .web__video h2 {
+    font-size: 45px;
+    margin-left: 50px;
+  }
+}
+
+.web__video p {
+  grid-area: parrafo;
+}
+@media only screen and (min-width: 992px) {
+  .web__video p {
+    align-self: flex-start;
+    text-align: start;
+    margin-left: 138px;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .web__video p {
+    font-size: 24px;
+    margin-left: 40px;
+  }
+}
+
+.web__video article {
+  max-width: 1240px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-areas: "titulo" "parrafo" "video";
+}
+@media only screen and (min-width: 992px) {
+  .web__video article {
+    height: 400px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas: "titulo video video" "parrafo video video";
+  }
+}
+
+.video__container {
+  width: 90vw;
+  max-width: 620px;
+  height: 51vw;
+  max-height: 350px;
+  box-shadow: -10px 10px 10px rgba(38, 38, 38, 0.6588235294);
+  grid-area: video;
+}
+@media only screen and (min-width: 992px) {
+  .video__container {
+    align-self: flex-start;
+    margin-left: 50px;
+  }
+}
+
+.web__empresas {
+  margin-top: 40px;
+  background-color: #fff;
+}
+
+.web__logo--container {
+  margin-bottom: 10px;
+  width: 100vw;
+  max-width: 1240px;
+  display: flex;
 }/*# sourceMappingURL=style.css.map */
