se terminaron de hacer responsive todas las paginas y se comenzaron a colocar mixin y extend

--- a/sass/_grafico.scss
+++ b/sass/_grafico.scss
@@ -88,6 +88,10 @@
     background-color: $blanco;
 }
 
+.grafico__empresas h3{
+    font-size: 30px;
+}
+
 .grafico__logo--container{
     margin-bottom: 10px;
     width: 100vw;
