--- a/sass/_ilustraciones.scss
+++ b/sass/_ilustraciones.scss
@@ -93,6 +93,10 @@
     background-color: $blanco;
 }
 
+.ilustraciones__empresas h3{
+    font-size: 30px;
+}
+
 .ilustraciones__logo--container{
     margin-bottom: 10px;
     width: 100vw;
