--- a/sass/_web.scss
+++ b/sass/_web.scss
@@ -93,6 +93,10 @@
     background-color: $blanco;
 }
 
+.web__empresas h3{
+    font-size: 30px;
+}
+
 .web__logo--container{
     margin-bottom: 10px;
     width: 100vw;
