--- a/styles/style.css
+++ b/styles/style.css
@@ -911,10 +911,15 @@ nav li {
   align-self: flex-end;
 }
 .sobreMi p {
-  text-align: start;
+  text-align: center;
   grid-area: s-parrafo;
   padding: 0;
   align-self: flex-start;
+}
+@media only screen and (min-width: 992px) {
+  .sobreMi p {
+    text-align: start;
+  }
 }
 
 .trayectoria {
