--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -17,8 +17,7 @@
 .contactform__container{
     display: flex;
     justify-content: center;
-    width: 100%;
-    max-width: 1240px;
+    @include ancho (100%, 1240px);
     margin-top: 20px;
     background-image: url(../img/OhCherry-Background.jpg);
     background-repeat: no-repeat;
