--- a/sass/_trabajos.scss
+++ b/sass/_trabajos.scss
@@ -23,8 +23,7 @@
             display: flex;
             flex-direction: row;
             justify-content: space-evenly;
-            max-width: 1240px;
-            width: 60%;
+            @include ancho (60%, 1240px);
             flex-wrap: wrap;
         }
 
