--- a/sass/_web.scss
+++ b/sass/_web.scss
@@ -1,16 +1,12 @@
 .hero__web{
-    margin-top: clamp(65px, 17vw, 130px);
-    background-image: url(../img/fondorosa.jpg);
-    background-size: cover;
+    @extend .hero__ilustraciones;
 
     div{
         max-width: 1024px;
     }
 
     .hero__web--titulo{
-        text-align: end;
-        font-size: clamp(40px, 12vw , 60px);
-        margin-right: 10px;
+        @extend .hero__ilustraciones--titulo;
     }
 }
 
@@ -19,9 +15,7 @@
 }
 
 .web__video{
-    margin-top: 40px;
-    background-color: $color_primario;
-    padding: 20px 0px;
+    @extend .ilustraciones__video;
 
     @media only screen and (min-width: 992px) {
         background: linear-gradient(315deg, rgba(45,45,45,1) 0%, rgba(45,45,45,1) 6%, rgba(241,131,195,1) 6%, rgba(241,131,195,1) 10%, rgba(45,45,45,1) 10%, rgba(45,45,45,1) 15%, rgba(241,131,195,1) 15%, rgba(241,131,195,1) 18%, rgba(45,45,45,1) 18%, rgba(45,45,45,1) 20%, rgba(241,131,195,1) 20%);
@@ -75,12 +69,7 @@
 }
 
 .video__container {
-    width: 90vw;
-    max-width: 620px;
-    height: 51vw;
-    max-height: 350px;
-    box-shadow: -10px 10px 10px #262626a8 ;
-    grid-area: video;
+    @extend .video__container;
 
     @media only screen and (min-width: 992px) {
             align-self: flex-start;
@@ -95,11 +84,9 @@
 
 .web__empresas h3{
     font-size: 30px;
+    padding-top: 30px;
 }
 
 .web__logo--container{
-    margin-bottom: 10px;
-    width: 100vw;
-    max-width: 1240px;
-    display: flex;
+    @extend .ilustraciones__logo--container;
 }
