--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,3 @@
-@charset "UTF-8";
-/*colores*/
-/*tamaños*/
 @import url("https://fonts.googleapis.com/css2?family=Barlow&family=Montserrat:wght@100;300;800&display=swap");
 * {
   padding: 0;
@@ -188,7 +185,7 @@ nav li {
 .hero-container .hero-banner {
   display: flex;
   width: 100%;
-  max-width: 1024px;
+  max-width: 1240px;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
@@ -332,8 +329,8 @@ nav li {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    max-width: 1240px;
     width: 60%;
+    max-width: 1240px;
     flex-wrap: wrap;
   }
 }
@@ -1057,15 +1054,15 @@ nav li {
   border-radius: 50%;
 }
 
-.hero__ilustraciones {
+.hero__ilustraciones, .hero__web, .hero__grafico {
   margin-top: clamp(65px, 17vw, 130px);
   background-image: url(../img/fondorosa.jpg);
   background-size: cover;
 }
-.hero__ilustraciones div {
+.hero__ilustraciones div, .hero__web div, .hero__grafico div {
   max-width: 1024px;
 }
-.hero__ilustraciones .hero__ilustraciones--titulo {
+.hero__ilustraciones .hero__ilustraciones--titulo, .hero__web .hero__ilustraciones--titulo, .hero__web .hero__web--titulo, .hero__grafico .hero__ilustraciones--titulo, .hero__grafico .hero__grafico--titulo {
   text-align: end;
   font-size: clamp(40px, 12vw, 60px);
   margin-right: 10px;
@@ -1075,59 +1072,59 @@ nav li {
   margin-top: 40px;
 }
 
-.ilustraciones__video {
+.ilustraciones__video, .web__video {
   margin-top: 40px;
   background-color: #f183c3;
   padding: 20px 0px;
 }
 @media only screen and (min-width: 992px) {
-  .ilustraciones__video {
+  .ilustraciones__video, .web__video {
     background: linear-gradient(90deg, rgb(241, 131, 195) 0%, rgb(241, 131, 195) 60%, rgb(45, 45, 45) 60%, rgb(45, 45, 45) 99%);
   }
 }
 
-.ilustraciones__video h2 {
+.ilustraciones__video h2, .web__video h2 {
   grid-area: titulo;
 }
 @media only screen and (min-width: 992px) {
-  .ilustraciones__video h2 {
+  .ilustraciones__video h2, .web__video h2 {
     align-self: flex-end;
     text-align: start;
     margin-left: 138px;
   }
 }
 @media only screen and (min-width: 1024px) {
-  .ilustraciones__video h2 {
+  .ilustraciones__video h2, .web__video h2 {
     font-size: 45px;
     margin-left: 50px;
   }
 }
 
-.ilustraciones__video p {
+.ilustraciones__video p, .web__video p {
   grid-area: parrafo;
 }
 @media only screen and (min-width: 992px) {
-  .ilustraciones__video p {
+  .ilustraciones__video p, .web__video p {
     align-self: flex-start;
     text-align: start;
     margin-left: 138px;
   }
 }
 @media only screen and (min-width: 1024px) {
-  .ilustraciones__video p {
+  .ilustraciones__video p, .web__video p {
     font-size: 24px;
     margin-left: 40px;
   }
 }
 
-.ilustraciones__video article {
+.ilustraciones__video article, .web__video article {
   max-width: 1240px;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-areas: "titulo" "parrafo" "video";
 }
 @media only screen and (min-width: 992px) {
-  .ilustraciones__video article {
+  .ilustraciones__video article, .web__video article {
     height: 400px;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-areas: "titulo video video" "parrafo video video";
@@ -1156,29 +1153,18 @@ nav li {
 
 .ilustraciones__empresas h3 {
   font-size: 30px;
+  padding-top: 30px;
 }
 
-.ilustraciones__logo--container {
+.ilustraciones__logo--container, .web__logo--container, .grafico__logo--container {
   margin-bottom: 10px;
   width: 100vw;
   max-width: 1240px;
-  display: flex;
 }
 
-.hero__grafico {
-  margin-top: clamp(65px, 17vw, 130px);
-  background-image: url(../img/fondorosa.jpg);
-  background-size: cover;
-}
 .hero__grafico div {
   max-width: 1024px;
 }
-.hero__grafico .hero__grafico--titulo {
-  text-align: end;
-  font-size: clamp(40px, 12vw, 60px);
-  margin-right: 10px;
-}
-
 .trabajos_grafico {
   margin-top: 40px;
 }
@@ -1238,14 +1224,6 @@ nav li {
   }
 }
 
-.video__container {
-  width: 90vw;
-  max-width: 620px;
-  height: 51vw;
-  max-height: 350px;
-  box-shadow: -10px 10px 10px rgba(38, 38, 38, 0.6588235294);
-  grid-area: video;
-}
 @media only screen and (min-width: 992px) {
   .video__container {
     align-self: center;
@@ -1259,38 +1237,16 @@ nav li {
 
 .grafico__empresas h3 {
   font-size: 30px;
+  padding-top: 30px;
 }
 
-.grafico__logo--container {
-  margin-bottom: 10px;
-  width: 100vw;
-  max-width: 1240px;
-  display: flex;
-}
-
-.hero__web {
-  margin-top: clamp(65px, 17vw, 130px);
-  background-image: url(../img/fondorosa.jpg);
-  background-size: cover;
-}
 .hero__web div {
   max-width: 1024px;
 }
-.hero__web .hero__web--titulo {
-  text-align: end;
-  font-size: clamp(40px, 12vw, 60px);
-  margin-right: 10px;
-}
-
 .trabajos_web {
   margin-top: 40px;
 }
 
-.web__video {
-  margin-top: 40px;
-  background-color: #f183c3;
-  padding: 20px 0px;
-}
 @media only screen and (min-width: 992px) {
   .web__video {
     background: linear-gradient(315deg, rgb(45, 45, 45) 0%, rgb(45, 45, 45) 6%, rgb(241, 131, 195) 6%, rgb(241, 131, 195) 10%, rgb(45, 45, 45) 10%, rgb(45, 45, 45) 15%, rgb(241, 131, 195) 15%, rgb(241, 131, 195) 18%, rgb(45, 45, 45) 18%, rgb(45, 45, 45) 20%, rgb(241, 131, 195) 20%);
@@ -1345,14 +1301,6 @@ nav li {
   }
 }
 
-.video__container {
-  width: 90vw;
-  max-width: 620px;
-  height: 51vw;
-  max-height: 350px;
-  box-shadow: -10px 10px 10px rgba(38, 38, 38, 0.6588235294);
-  grid-area: video;
-}
 @media only screen and (min-width: 992px) {
   .video__container {
     align-self: flex-start;
@@ -1367,11 +1315,5 @@ nav li {
 
 .web__empresas h3 {
   font-size: 30px;
-}
-
-.web__logo--container {
-  margin-bottom: 10px;
-  width: 100vw;
-  max-width: 1240px;
-  display: flex;
+  padding-top: 30px;
 }/*# sourceMappingURL=style.css.map */
