--- a/sass/_generales.scss
+++ b/sass/_generales.scss
@@ -10,6 +10,33 @@ body{
     background-color: $color_secundario;
 }
 
+h1{
+    margin-top: 30px;
+    margin-bottom: 0;
+    font-weight: 900;
+    font-size: $responsive_size-h1;
+    text-align: center;
+}
+
+h2{
+    font-weight: 900;
+    text-align: center;
+}
+
+h3{
+    color: $color_primario;
+    font-size: 25px;
+    font-weight: 900;
+    text-align: center;
+}
+
+h4{
+    font-size: clamp(10px, 10px + 1vw, 20px);
+    font-weight: 900;
+    text-transform: uppercase;
+    text-decoration: underline $color_primario; 
+}
+
 p{
     font-family: 'Barlow', sans-serif;
     font-size: 0.875rem;
@@ -27,10 +54,12 @@ a{
     font-weight: 600;
     font-size: 1.25rem;
     color: $blanco;
+
+    &:hover{
+        color: $color_primario;
+    }
 }
-a:hover{
-    color: $color_primario;
-}
+
 
 .boton{
     color: $color_primario;
@@ -64,29 +93,3 @@ img{
     width: 100%;
 }
 
-h1{
-    margin-top: 30px;
-    margin-bottom: 0;
-    font-weight: 900;
-    font-size: $responsive_size-a;
-    text-align: center;
-}
-
-h2{
-    font-weight: 900;
-    text-align: center;
-}
-
-h3{
-    color: $color_primario;
-    font-size: 25px;
-    font-weight: 900;
-    text-align: center;
-}
-
-h4{
-    font-size: clamp(10px, 10px + 1vw, 20px);
-    font-weight: 900;
-    text-transform: uppercase;
-    text-decoration: underline $color_primario; 
-}
