--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,5 +4,18 @@ $color_complementario: #2d2d2d;
 $blanco: #fff;
 $negro: #000;
 
+$responsive_size-h1: clamp(40px, 8vw, 80px);
+$responsive_size-title: clamp(45px, 10vw, 100px);
 
-$responsive_size-a: clamp(41px, 15vw , 60px);
+$responsive_size-b: clamp(12px, 10px + 1vw, 20px);
+
+$responsive_size-d: clamp(41px, 15vw , 60px);
+$responsive_size-e: clamp(41px, 15vw , 60px);
+$responsive_size-p: clamp(41px, 15vw , 60px);
+$responsive_size-p: clamp(41px, 15vw , 60px);
+$responsive_size-p: clamp(41px, 15vw , 60px);
+$responsive_size-p: clamp(41px, 15vw , 60px);
+$responsive_size-p: clamp(41px, 15vw , 60px);
+$responsive_size-p: clamp(41px, 15vw , 60px);
+$responsive_size-p: clamp(41px, 15vw , 60px);
+$responsive_size-p: clamp(41px, 15vw , 60px);
