--- a/sass/_generales.scss
+++ b/sass/_generales.scss
@@ -19,6 +19,7 @@ h1{
 }
 
 h2{
+    font-size: $responsive_size-h2;
     font-weight: 900;
     text-align: center;
 }
@@ -39,14 +40,10 @@ h4{
 
 p{
     font-family: 'Barlow', sans-serif;
-    font-size: 0.875rem;
+    font-size: $responsive_size-p;
     max-width: 100vw;
     text-align: center;
     padding: 0.9375rem 0.625rem;
-
-    @media only screen and (min-width: 768px) {
-            font-size: 15px;
-        }
 }
 
 a{
@@ -67,11 +64,13 @@ a{
     padding: 0.9375rem 1.5625rem;
     border-radius: 0.625rem;
     height: 6.25rem;
+
+    &:hover{
+        color: $blanco;
+        background-color: $color_primario;
+    }
 }
-.boton:hover{
-    color: $blanco;
-    background-color: $color_primario;
-}
+
 
 footer{
     background-color: $color_complementario;
