--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,7 @@ h1 {
 }
 
 h2 {
+  font-size: clamp(30px, 6vw, 60px);
   font-weight: 900;
   text-align: center;
 }
@@ -41,15 +42,10 @@ h4 {
 
 p {
   font-family: "Barlow", sans-serif;
-  font-size: 0.875rem;
+  font-size: clamp(14px, 1.6vw, 20px);
   max-width: 100vw;
   text-align: center;
   padding: 0.9375rem 0.625rem;
-}
-@media only screen and (min-width: 768px) {
-  p {
-    font-size: 15px;
-  }
 }
 
 a {
@@ -69,7 +65,6 @@ a:hover {
   border-radius: 0.625rem;
   height: 6.25rem;
 }
-
 .boton:hover {
   color: #fff;
   background-color: #f183c3;
@@ -175,7 +170,6 @@ nav li {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  width: 100%;
   background-image: url(../img/fondorosa.webp);
   background-size: cover;
   background-repeat: repeat;
@@ -190,14 +184,14 @@ nav li {
   align-items: center;
 }
 .hero-container .hero-banner .titulo {
-  font-size: clamp(45px, 10vw, 100px);
+  font-size: clamp(45px, 8vw, 100px);
   font-family: "Montserrat", sans-serif;
   text-align: center;
   font-weight: 100;
   width: 100%;
 }
 .hero-container .hero-banner .subtitulo {
-  font-size: clamp(45px, 10vw, 100px);
+  font-size: clamp(45px, 8vw, 100px);
   font-family: "Montserrat", sans-serif;
   font-weight: 900;
   width: 100%;
@@ -233,20 +227,7 @@ nav li {
   grid-area: foto;
   justify-self: center;
   margin-top: 50px;
-  width: min(80vw, 80vh);
-}
-.conoceme .conoceme__foto-container img {
-  width: 100%;
-}
-@media only screen and (min-width: 992px) {
-  .conoceme .conoceme__foto-container {
-    width: min(67vw, 50vh);
-  }
-}
-@media only screen and (min-width: 1024px) {
-  .conoceme .conoceme__foto-container {
-    width: 550px;
-  }
+  width: clamp(256px, 50vw, 550px);
 }
 .conoceme h1 {
   grid-area: titulo;
@@ -259,14 +240,13 @@ nav li {
 }
 .conoceme p {
   grid-area: parrafo;
-  max-width: 100vw;
+  max-width: 90%;
   text-align: center;
   padding: 15px 10px;
 }
 @media only screen and (min-width: 992px) {
   .conoceme p {
     text-align: start;
-    font-size: 18px;
     align-self: center;
   }
 }
@@ -305,7 +285,6 @@ nav li {
 }
 .trabajos-container h2 {
   color: #fff;
-  font-size: clamp(41px, 15vw, 60px);
   text-align: center;
   font-weight: 900;
   margin-bottom: 50px;
@@ -365,6 +344,7 @@ nav li {
 }
 .trabajos-container .trabajos p {
   display: none;
+  font-size: 15px;
 }
 @media only screen and (min-width: 768px) {
   .trabajos-container .trabajos p {
@@ -385,13 +365,10 @@ nav li {
   align-items: center;
 }
 .proyectos__container h2 {
-  font-size: clamp(41px, 15vw, 60px);
-  font-weight: 900;
   width: 90vw;
   margin-top: 50px;
   padding-bottom: 50px;
   color: #f183c3;
-  text-align: center;
 }
 .proyectos__container .proyectos__imgcont {
   display: grid;
@@ -471,20 +448,11 @@ nav li {
   align-items: center;
 }
 .habilidades h2 {
-  font-size: 40px;
-  text-align: center;
-  width: 80vw;
-  font-weight: 900;
   padding-top: 50px;
-}
-@media only screen and (min-width: 768px) {
-  .habilidades h2 {
-    font-size: 50px;
-  }
 }
 .habilidades .habilidades__logos {
   width: 70%;
-  padding-top: 20px;
+  padding-top: 35px;
   max-width: 1240px;
   display: flex;
   flex-wrap: wrap;
@@ -722,20 +690,9 @@ nav li {
   }
 }
 
-.hero__contacto {
-  margin-top: clamp(65px, 17vw, 130px);
-  background-image: url(../img/fondorosa.webp);
-  background-size: cover;
-}
 .hero__contacto div {
   max-width: 1024px;
 }
-.hero__contacto h1 {
-  text-align: end;
-  font-size: clamp(40px, 12vw, 60px);
-  margin-right: 10px;
-}
-
 .contactform__container {
   display: flex;
   justify-content: center;
@@ -850,20 +807,18 @@ nav li {
   }
 }
 
-.hero__historia {
+.hero__historia, .hero__web, .hero__grafico, .hero__ilustraciones, .hero__contacto {
   margin-top: clamp(65px, 17vw, 130px);
   background-image: url(../img/fondorosa.webp);
   background-size: cover;
-  max-width: 1240vw;
 }
-.hero__historia .hero__historia--titulo {
+.hero__historia .hero__historia--titulo, .hero__web .hero__historia--titulo, .hero__web .hero__web--titulo, .hero__grafico .hero__historia--titulo, .hero__grafico .hero__grafico--titulo, .hero__ilustraciones .hero__historia--titulo, .hero__ilustraciones .hero__ilustraciones--titulo, .hero__contacto .hero__historia--titulo, .hero__contacto h1 {
   text-align: end;
-  font-size: clamp(40px, 12vw, 60px);
   margin-right: 10px;
 }
 
 .hero__historia--banner {
-  max-width: 1240px;
+  max-width: 1024px;
 }
 
 .sobreMi {
@@ -872,18 +827,8 @@ nav li {
   max-width: 1240px;
 }
 .sobreMi div {
-  width: min(80vw, 80vh);
+  width: clamp(256px, 50vw, 550px);
   grid-area: s-foto;
-}
-@media only screen and (min-width: 992px) {
-  .sobreMi div {
-    width: 350px;
-  }
-}
-@media only screen and (min-width: 1024px) {
-  .sobreMi div {
-    width: 550px;
-  }
 }
 @media only screen and (min-width: 992px) {
   .sobreMi {
@@ -939,11 +884,10 @@ nav li {
   }
 }
 .trayectoria .trayectoria__container div {
-  width: min(80vw, 80vh);
+  width: clamp(256px, 30vw, 350px);
 }
 @media only screen and (min-width: 992px) {
   .trayectoria .trayectoria__container div {
-    width: 350px;
     grid-area: t-foto;
   }
 }
@@ -983,7 +927,7 @@ nav li {
   .conocimientos .conocimientos__foto {
     display: block;
     grid-area: c-foto;
-    width: 350px;
+    width: clamp(256px, 30vw, 350px);
     margin-right: 40px;
   }
 }
@@ -1057,20 +1001,9 @@ nav li {
   border-radius: 50%;
 }
 
-.hero__ilustraciones, .hero__web, .hero__grafico {
-  margin-top: clamp(65px, 17vw, 130px);
-  background-image: url(../img/fondorosa.webp);
-  background-size: cover;
-}
-.hero__ilustraciones div, .hero__web div, .hero__grafico div {
+.hero__ilustraciones div {
   max-width: 1024px;
 }
-.hero__ilustraciones .hero__ilustraciones--titulo, .hero__web .hero__ilustraciones--titulo, .hero__web .hero__web--titulo, .hero__grafico .hero__ilustraciones--titulo, .hero__grafico .hero__grafico--titulo {
-  text-align: end;
-  font-size: clamp(40px, 12vw, 60px);
-  margin-right: 10px;
-}
-
 .trabajos_ilustraciones {
   margin-top: 40px;
 }
