--- a/sass/_ilustraciones.scss
+++ b/sass/_ilustraciones.scss
@@ -26,6 +26,7 @@
 
 .ilustraciones__video h2{
     grid-area: titulo ;
+    font-size: $responsive_size-m;
 
     @media only screen and (min-width: 992px) {
         align-self: flex-end;
@@ -85,14 +86,15 @@
 .ilustraciones__empresas{
     margin-top: 40px;
     background-color: $blanco;
+    width: 100%;
 }
 
 .ilustraciones__empresas h3{
-    font-size: 30px;
+    font-size: $responsive_size-l;
     padding-top: 30px;
 }
 
 .ilustraciones__logo--container{
     margin-bottom: 10px;
-    @include ancho (100vw, 1240px);
+    @include ancho (100%, 1240px);
 }
