--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,9 +4,15 @@ $color_complementario: #2d2d2d;
 $blanco: #fff;
 $negro: #000;
 
-$responsive_size-h1: clamp(40px, 8vw, 80px);
-$responsive_size-h2: clamp(30px, 6vw, 60px);
-$responsive_size-title: clamp(45px, 8vw, 100px);
+$responsive_size-xxl: clamp(45px, 8vw, 100px);
+$responsive_size-xl: clamp(40px, 8vw, 80px);
+$responsive_size-l: clamp(30px, 6vw, 60px);
+$responsive_size-m: clamp(30px, 4vw, 45px);
+$responsive_size-s: clamp(18px, 1.8vw, 25px);
+$responsive_size-xs: clamp(16px, 10px + 1vw, 22px);
 $responsive_size-p: clamp(14px, 1.6vw , 20px);
-$responsive_size-img-grande: clamp(256px, 50vw, 550px);
-$responsive_size-img-chica: clamp(256px, 30vw, 350px);
+$responsive_size-footer: clamp(13px, 1.6vw , 18px);
+$responsive_size-logo: clamp(15px, 1.6vw , 20px);
+$responsive_size-img-l: clamp(256px, 50vw, 550px);
+$responsive_size-img-m: clamp(256px, 30vw, 350px);
+$responsive_size-img-s: clamp(100px, 20vw, 200px);
