--- a/sass/_web.scss
+++ b/sass/_web.scss
@@ -24,6 +24,7 @@
 
 .web__video h2{
     grid-area: titulo ;
+    font-size: $responsive_size-m;
 
     @media only screen and (min-width: 992px) {
         align-self: flex-end;
@@ -78,12 +79,11 @@
 }
 
 .web__empresas{
-    margin-top: 40px;
-    background-color: $blanco;
+    @extend .ilustraciones__empresas;
 }
 
 .web__empresas h3{
-    font-size: 30px;
+    font-size: $responsive_size-l;
     padding-top: 30px;
 }
 
