--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -33,6 +33,10 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+
+        h2{
+            font-size: clamp(30px, 6vw, 50px);
+        }
     }
 }
 
@@ -93,18 +97,22 @@
         justify-content: center;
     }
 
-    .contacto__logos--container h3{
-        font-size: 10px ;
+    .contacto__logos--container a{
+        font-size: 12px ;
         font-weight: 900;
         margin: 10%;
         color: $color_secundario;
+
+        &:hover{
+            color: $blanco;
+        }
         
-        @media only screen and (min-width: 480px) {
-                font-size: 12px;
+        @media only screen and (min-width: 768px) {
+                font-size: 14px;
                 margin: 6%;
             }
 
-        @media only screen and (min-width: 768px) {
+        @media only screen and (min-width: 992px) {
                 font-size: 15px;
             }
     }
