--- a/sass/_herop.scss
+++ b/sass/_herop.scss
@@ -16,7 +16,7 @@
         align-items: center;
 
         .titulo{
-            font-size: $responsive_size-title;
+            font-size: $responsive_size-xxl;
             font-family: 'Montserrat', sans-serif;
             text-align: center;
             font-weight: 100;
@@ -24,7 +24,7 @@
         }
 
         .subtitulo{
-            font-size: $responsive_size-title;
+            font-size: $responsive_size-xxl;
             font-family: 'Montserrat', sans-serif;
             font-weight: 900;
             width: 100%;
