--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -18,6 +18,15 @@
         }
     }
 
+    h3{
+        font-size: $responsive_size-xs;
+        font-weight: 900;
+        text-transform: uppercase;
+        text-decoration: underline $color_primario;
+        color: $blanco;
+        text-align: start;
+    }
+
     .footer__paginas{
         display: flex;
         flex-direction: column;
