--- a/sass/_habilidades.scss
+++ b/sass/_habilidades.scss
@@ -6,7 +6,9 @@
     flex-direction: column;
     align-items: center;
 
-    h2{
+    h3{
+        font-size: $responsive_size-l;
+        color: $blanco;
         padding-top: 50px;
     }
 
