--- a/styles/style.css
+++ b/styles/style.css
@@ -37,14 +37,6 @@ h3 {
   text-align: center;
 }
 
-h4 {
-  font-size: clamp(16px, 10px + 1vw, 22px);
-  font-weight: 900;
-  text-transform: uppercase;
-  -webkit-text-decoration: underline #f183c3;
-          text-decoration: underline #f183c3;
-}
-
 p {
   font-family: "Barlow", sans-serif;
   font-size: clamp(14px, 1.6vw, 20px);
@@ -446,7 +438,9 @@ nav li {
   flex-direction: column;
   align-items: center;
 }
-.habilidades h2 {
+.habilidades h3 {
+  font-size: clamp(30px, 6vw, 60px);
+  color: #fff;
   padding-top: 50px;
 }
 .habilidades .habilidades__logos {
@@ -640,6 +634,15 @@ nav li {
   .footer__container .footer__imgContainer {
     justify-self: center;
   }
+}
+.footer__container h3 {
+  font-size: clamp(16px, 10px + 1vw, 22px);
+  font-weight: 900;
+  text-transform: uppercase;
+  -webkit-text-decoration: underline #f183c3;
+          text-decoration: underline #f183c3;
+  color: #fff;
+  text-align: start;
 }
 .footer__container .footer__paginas, .footer__container .footer__contacto {
   display: flex;
