--- a/styles/style.css
+++ b/styles/style.css
@@ -971,6 +971,12 @@ nav li {
   display: flex;
   align-items: center;
   margin: 9px -11px 0px 3px;
+  flex-direction: column;
+}
+@media only screen and (min-width: 509px) {
+  .conocimientos__logo--container .conocimientos__logo {
+    flex-direction: row;
+  }
 }
 .conocimientos__logo--container .conocimientos__logo .conocimientos__img {
   width: 60px;
@@ -978,8 +984,13 @@ nav li {
 .conocimientos__logo--container .conocimientos__logo h3 {
   color: #fff;
   margin: 0px 5px;
-  text-align: start;
-  font-size: clamp(14px, 1.6vw, 20px);
+  text-align: center;
+  font-size: clamp(13px, 1.6vw, 18px);
+}
+@media only screen and (min-width: 509px) {
+  .conocimientos__logo--container .conocimientos__logo h3 {
+    text-align: start;
+  }
 }
 @media only screen and (min-width: 768px) {
   .conocimientos__logo--container {
